Portfolio.css
/* ... */
@media only screen and (max-width: 500px) {
    body {

        /* background-image: url(images/SmallerBg.png); */
        margin-left: 0;

    }
    #name h1 {
    margin: 0;
}
.link-container{
    margin: 2px;
}
#contact-list ul{
    font-size: 35px;
}
.about-content{
    flex-direction: column;
    align-items: center;
}

    #project-x {
        gap: 10px;
        padding-bottom: 15px;
    }

    .project-display {
        flex: 0 0 auto;
        max-width: 95%;
    }

    .project-info {
        margin-top: 0;
        margin-bottom: 5px;
    }
}



@media only screen and (max-width: 1280px) {

    #outer-nav {
        flex-direction: column;

    }

    .nav ul {
        width: 100%;
        flex-direction: column;
    }

    .nav li {
        text-align: center;
    }

    .nav li a {
        padding: .5rem 1rem;
    }

    #course-outer {
        flex-direction: column;
        padding: 1%;
        margin-bottom: 20px;
    }

    #course {
        width: 70vw;
        max-width: 400px;
        height: auto;
        min-height: 250px;
        margin: 0 auto 20px auto;
    }
  


    #about p {
        font-size: smaller;

       
        border-radius: 50px;

    }


    #picture,
    #about {
        width: 50%;
        padding: 20px;
        margin: 0;
        text-align: center;
        line-height: 15px;
        font-size: small;

    }


    #about {
        padding-top: 0;

        padding-bottom: 20px;
        width: 79%;
        text-align: left;

    }

    #intro-container {
        flex-direction: column;

        align-items: center;
        text-align: center;
        padding: 10px;
        margin-top: 8%;

    }



    .project-display {
        flex: 0 0 auto;
        max-width: 90%;
        min-width: auto;
    }

    .project-display img {
        width: 80vw;
    }

    #project-x {
        flex-direction: column;
        align-items: center;
        padding-left: 2%;
        gap: 15px;
        padding-bottom: 20px;
    }

    #Projects {
        margin: 5% 2%;
        width: 95%;
    }

    #technology {
        flex-wrap: wrap;
        gap: 8px;
        justify-content: center;
    }

    #technology h4 {
        font-size: 0.8em;
        padding: 6px 12px;
    }

    .project-info {
        padding-right: 5%;
        padding-left: 5%;
        text-align: center;
        margin-top: 0;
        margin-bottom: 10px;
    }

    h2 span {
        font-size: smaller;

    }

    #contact {
        padding-bottom: 7%;
        margin: 5% 2%;
        height: auto;
        min-height: 60vh;
    }

    #contact p {

        padding-top: 8%;

    }



    #contact-list ul {
        flex-direction: column;
        width: 95%;
        max-width: 350px;
        flex-wrap: wrap;
        gap: 15px;
        font-size: 4vw;
        line-height: 1.5;
        margin: 0 auto;
    }

    #contact #contact-list ul li {
        width: 100%;
        justify-content: center;
        margin-bottom: 10px;
    }

    #contact #contact-list ul li i {
        /* display: none; */
        justify-content: center;
        font-size: 6vw;

        /* height: 1vh; */
    }

    #contact #contactlist a:hover {
        transform: scale(1.5);
        cursor: pointer;

    }



}

.hidden {
    opacity: 0;
    transform: translateY(40px);
    transition: opacity 1s ease-out, transform 0.8s ease-out;
}


.visible {
    opacity: 1;
    transform: translateY(0);
}

@keyframes jiggle {

    0%,
    100% {
        transform: translateX(0);
    }

    25% {
        transform: translateX(-5px);
    }

    50% {
        transform: translateX(5px);
    }

    75% {
        transform: translateX(-5px);
    }
}

.jiggle {
    animation: jiggle 0.5s ease-in-out;
}
/* ... */

